--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpeg" alt="" /></a>
-					<h1><strong>I am Ee Thiing</strong>, an undergraduate <br />
-					majoring in Artificial Intelligence<br />
-					at Multimedia University.</h1>
+					<h1><strong>I am Ee Thiing</strong>,  and I recently graduated with a Bachelor of 
+						Computer Science in Artificial Intelligence from Multimedia University Melaka. 
+						I am looking for a role that will help provide a strong foundation for my future career where I can utilize my knowledge and hone my skills at the same time. 
+						<br /></h1>
 				</div>
 			</header>
 
+			
 		
 		<!-- Main -->
 		<div id="main">
@@ -31,9 +33,45 @@
 						<h2>Portfolio</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/eethiing/HAVEN" class="image fit thumb" target="_blank"><img src="images/thumbs/haven.png" alt="" /></a>
-								<h3>Haven</h3>
-								<p>Website Development - HTML - CSS - JavaScript</p>
+								<a href="https://github.com/eethiing/Data-Analytics-on-Diabetes-Dataset" class="image fit thumb" target="_blank"><img src="images/thumbs/diabetes.jpeg" alt="" /></a>
+								<h3>Data Analytics on Diabetes Dataset</h3>
+								<p>Python - Data Analysis - Machine Learning </p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Stationeries-Classification-Using-CNN" class="image fit thumb" target="_blank"><img src="images/thumbs/stationeries.png" alt="" /></a>
+								<h3>Stationeries Classification Using CNN</h3>
+								<p>Python - Machine Learning - Deep Learning</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Simple-Car-Recommendation-System" class="image fit thumb" target="_blank"><img src="images/thumbs/car.jpg" alt="" /></a>
+								<h3>Simple Car Recommendation System</h3>
+								<p>Python - Tkinter - Expert System</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Identify-Hidden-Message" class="image fit thumb" target="_blank"><img src="images/thumbs/hidden.jpg" alt="" /></a>
+								<h3>Identify Hidden Message</h3>
+								<p>Python - Computer Vision</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Biography-Multilingual-Question-Answering-Chatbot" class="image fit thumb" target="_blank"><img src="images/thumbs/chatbot.jpg" alt="" /></a>
+								<h3>Biography Multilingual Question Answering Chatbot</h3>
+								<p>Python - NLP</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Disease-Classification-Kaggle" class="image fit thumb" target="_blank"><img src="images/thumbs/disease.jpg" alt="" /></a>
+								<h3>Disease Classification</h3>
+								<p>Python - Machine Learning </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Pet-Adoption-System" class="image fit thumb" target="_blank"><img src="images/thumbs/pet_adoption.jpg" alt="" /></a>
+								<h3>Pet Adoption System</h3>
+								<p>XML - Python - Tkinter</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/Restoring-Ancient-Painting" class="image fit thumb" target="_blank"><img src="images/thumbs/painting.jpg" alt="" /></a>
+								<h3>Restoring Ancient Painting</h3>
+								<p>Python - Computer Vision</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/eethiing/Dynamic-Pricing-Website" class="image fit thumb" target="_blank"><img src="images/thumbs/dynamic_pricing.png" alt="" /></a>
@@ -44,11 +82,6 @@
 								<a href="https://github.com/eethiing/Price-Prediction-of-Digital-Signages" class="image fit thumb" target="_blank"><img src="images/thumbs/price_prediction.png" alt="" /></a>
 								<h3>Price Prediction of Digital Signages</h3>
 								<p>Python - Machine Learning - Random Forest - XGBoost</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/eethiing/E-Learning-System-" class="image fit thumb" target="_blank"><img src="images/thumbs/e-learning.png" alt="" /></a>
-								<h3>E-Learning System</h3>
-								<p>CSS - HTML</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/eethiing/Medical-Face-Mask-Selfie-Facial-Recognition" class="image fit thumb" target="_blank"><img src="images/thumbs/medical_mask.jpg" alt="" /></a>
@@ -84,6 +117,16 @@
 								<a href="https://github.com/eethiing/TicTacToe" class="image fit thumb" target="_blank"><img src="images/thumbs/tictactoe.jpg" alt="" /></a>
 								<h3>TicTacToe</h3>
 								<p>LISP</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/E-Learning-System-" class="image fit thumb" target="_blank"><img src="images/thumbs/e-learning.png" alt="" /></a>
+								<h3>E-Learning System</h3>
+								<p>CSS - HTML</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/eethiing/HAVEN" class="image fit thumb" target="_blank"><img src="images/thumbs/haven.png" alt="" /></a>
+								<h3>Haven</h3>
+								<p>Website Development - HTML - CSS - JavaScript</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/eethiing/Password-System" class="image fit thumb" target="_blank"><img src="images/thumbs/password.jpg" alt="" /></a>
